--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@
 #remote_theme: pages-themes/midnight@v0.2.0
 remote_theme: pages-themes/slate@v0.2.0
 
-title: ENG1 Group 15
+title: HesHus Group 15
 description: Heslington Hustle
